--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/LongCards/LongCards.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/LongCards/LongCards.cshtml
@@ -16,9 +16,14 @@
                             <div class="c-feature__content u-center">
                                 <h3 class="c-feature__title">@Html.Sitecore().Field(Templates.LongCards.Fields.MainTitle.ToString(), Model.Item)</h3>
                                 <p class="c-feature__desc">@Html.Sitecore().Field(Templates.LongCards.Fields.Description.ToString(), Model.Item)</p>
-                                <div class="c-feature__actions">
-                                    <a href="@Model.ButtonLink" class="o-btn o-btn--primary o-btn--flat o-btn--sm">@Html.Sitecore().Field(Templates.LongCards.Fields.ButtonText.ToString(), Model.Item)</a>
-                                </div>
+                                @if (!string.IsNullOrEmpty(Model.ButtonText) || !string.IsNullOrEmpty(Model.ButtonLink))
+                                {
+                                    <div class="c-feature__actions">
+                                        @Html.Sitecore().BeginField(Templates.LongCards.Fields.ButtonLink.ToString(), Model.Item, new { haschildren = true, @class = "o-btn o-btn--primary o-btn--flat o-btn--sm" })
+                                        @Html.Sitecore().Field(Templates.LongCards.Fields.ButtonText.ToString(), Model.Item)
+                                        @Html.Sitecore().EndField()
+                                    </div>
+                                }
                             </div>
                             <div class="c-feature__plate">
                                 <img src="@Model.ImageUrl" srcset="" alt="" class="c-feature__img">
