Update: ETF規模日期、取得近30日市價/淨值修正

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Overview.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Overview.cshtml
@@ -27,12 +27,7 @@
                     @if (Model.ETFScaleRecords != null && Model.ETFScaleRecords.Any())
                     {
                         var record = Model.ETFScaleRecords.FirstOrDefault();
-                        string date = string.Empty;
-
-                        //if (record.ScaleDate.HasValue)
-                        //{
-                        //    date = $"({DateTimeExtensions.FormatDate(record.ScaleDate)})";
-                        //}
+                        string date = string.IsNullOrEmpty(record.ScaleDate) ? string.Empty : $"({record.ScaleDate})";
 
                         <div class="c-zebraList__content">
                             <span class="t-bold">@(record.ScaleMillions)百萬@(record.Currency) @date</span>
