--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -122,6 +122,8 @@
         <a href="#" class="o-gotop is-active" data-gotop="true"></a>
     </div>
 
+    @Html.Sitecore().Placeholder("cookiebar")
+
     @* <!-- Global js / Begin --> *@
     @RenderAssetsService.Current.Scripts(
             "/themes/vendor/magnific-popup/magnific-popup.min.js",
@@ -154,7 +156,7 @@
     <!-- #START RenderSection: Bottom -->
     @RenderSection("Bottom", false)
     <!-- #END RenderSection: Bottom -->
-      <!-- #START RenderSection: Scripts -->
+    <!-- #START RenderSection: Scripts -->
     @RenderSection("Scripts", false)
     <!-- #END RenderSection: Scripts -->
     <!-- assets script -->
