更新圖片替換 lion-keyword.svg

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
@@ -193,7 +193,7 @@
                 <div class="l-flex__item" data-chart="marketTrend">
                     <div class="c-empty">
                         <div class="c-empty__img">
-                            <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                            <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                         </div>
                         <div class="c-empty__desc">沒有資料</div>
                     </div>
@@ -392,7 +392,7 @@
             {
                 <div class="c-empty">
                     <div class="c-empty__img">
-                        <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                        <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                     </div>
                     <div class="c-empty__desc">沒有資料</div>
                 </div>
@@ -418,7 +418,7 @@
                 <div class="l-flex__item" data-chart="etfTrend">
                     <div class="c-empty">
                         <div class="c-empty__img">
-                            <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                            <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                         </div>
                         <div class="c-empty__desc">沒有資料</div>
                     </div>
@@ -653,7 +653,7 @@
                     {
                         <div class="c-empty">
                             <div class="c-empty__img">
-                                <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                                <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                             </div>
                             <div class="c-empty__desc">沒有資料</div>
                         </div>
@@ -713,7 +713,7 @@
                     {
                         <div class="c-empty">
                             <div class="c-empty__img">
-                                <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                                <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                             </div>
                             <div class="c-empty__desc">沒有資料</div>
                         </div>
