--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Shareholding.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Shareholding.cshtml
@@ -24,7 +24,7 @@
                 <div class="l-flex__item" data-chart="so1">
                     <div class="c-empty">
                         <div class="c-empty__img">
-                            <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                            <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                         </div>
                         <div class="c-empty__desc">沒有資料</div>
                     </div>
@@ -86,7 +86,7 @@
             {
                 <div class="c-empty">
                     <div class="c-empty__img">
-                        <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                        <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                     </div>
                     <div class="c-empty__desc">沒有資料</div>
                 </div>
