--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
@@ -192,7 +192,7 @@
                         <div class="l-flex__item" data-chart="kLine">
                             <div class="c-empty">
                                 <div class="c-empty__img">
-                                    <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                                    <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                                 </div>
                                 <div class="c-empty__desc">沒有資料</div>
                             </div>
@@ -357,7 +357,7 @@
                                 </table>
                                 <div class="c-empty" empty-error-name="fundPrice-empty">
                                     <div class="c-empty__img">
-                                        <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                                        <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                                     </div>
                                     <div class="c-empty__desc">沒有資料</div>
                                 </div>
@@ -498,7 +498,7 @@
                                 </table>
                                 <div class="c-empty" empty-error-name="ETFPrice-empty">
                                     <div class="c-empty__img">
-                                        <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                                        <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                                     </div>
                                     <div class="c-empty__desc">沒有資料</div>
                                 </div>
@@ -641,7 +641,7 @@
                                 </table>
                                 <div class="c-empty" empty-error-name="globalIndex-empty">
                                     <div class="c-empty__img">
-                                        <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                                        <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                                     </div>
                                     <div class="c-empty__desc">沒有資料</div>
                                 </div>
