--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Overview.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Overview.cshtml
@@ -75,7 +75,7 @@
                             <div class="c-section__content" data-chart="performance">
                                 <div class="c-empty">
                                     <div class="c-empty__img">
-                                        <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                                        <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                                     </div>
                                     <div class="c-empty__desc">沒有資料</div>
                                 </div>
@@ -116,7 +116,7 @@
                             <div class="c-section__content" data-chart="netWorth">
                                 <div class="c-empty">
                                     <div class="c-empty__img">
-                                        <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                                        <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                                     </div>
                                     <div class="c-empty__desc">沒有資料</div>
                                 </div>
