--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_RiskIndicator.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_RiskIndicator.cshtml
@@ -129,7 +129,7 @@
                 {
                     <div class="c-empty">
                         <div class="c-empty__img">
-                            <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                            <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                         </div>
                         <div class="c-empty__desc">沒有資料</div>
                     </div>
@@ -164,7 +164,7 @@
                         <div class="c-chartBox__chart" data-chart="risk">
                             <div class="c-empty">
                                 <div class="c-empty__img">
-                                    <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                                    <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                                 </div>
                                 <div class="c-empty__desc">沒有資料</div>
                             </div>
@@ -271,7 +271,7 @@
             {
                 <div class="c-empty">
                     <div class="c-empty__img">
-                        <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                        <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                     </div>
                     <div class="c-empty__desc">沒有資料</div>
                 </div>
