--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_TechnicalAnalysis.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_TechnicalAnalysis.cshtml
@@ -33,7 +33,7 @@
                 <div class="l-flex__item" data-chart="kLine">
                     <div class="c-empty">
                         <div class="c-empty__img">
-                            <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+                            <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
                         </div>
                         <div class="c-empty__desc">沒有資料</div>
                     </div>
