--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -1714,7 +1714,7 @@
 <template id="tmplKeywordNotFound">
     <div class="c-empty">
         <div class="c-empty__img">
-            <img src="~/themes/images/lions/lion-keyword.svg" alt="">
+            <img src="@Url.Content("~/themes/images/lions/lion-keyword.svg")" alt="">
         </div>
         <div class="c-empty__desc">哎呀！沒找到耶...<br>試試看其他關鍵字吧</div>
     </div>
